--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,13 @@
-<h1>{{title}} </h1>
+<div style="display: block; width: 100%; height: 60px;">
+    <app-nav></app-nav>
+</div>
 
-<ul>
-    @for (user of users; track user.id) {
-    <li>
-        {{user.id}} - {{user.userName}}
-    </li>
-    }
-</ul>
+<div class="container" style="margin-top: 15px;">
+    <ul>
+        @for (user of users; track user.id) {
+        <li>
+            {{user.id}} - {{user.userName}}
+        </li>
+        }
+    </ul>
+</div>
