--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,6 +2,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">Dating App</a>
 
+        @if (accountService.currentUser()) {
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
                 <a class="nav-link">Matches</a>
@@ -13,11 +14,27 @@
                 <a class="nav-link">Messages</a>
             </li>
         </ul>
+        }
 
+        @if (accountService.currentUser()) {
+            <div class="dropdown" dropdown>
+                <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome user</a>
+                <div *dropdownMenu class="dropdown-menu">
+                    <a class="dropdown-item">Edit Profile</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" (click)="logout()">Logout</a>
+                    
+                </div>
+            </div>
+        }
+
+        @if (!accountService.currentUser()) {
         <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex">
             <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
-            <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password" type="password">
+            <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
+                type="password">
             <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
+    }
     </div>
 </nav>
