--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,11 +3,5 @@
 </div>
 
 <div class="container" style="margin-top: 15px;">
-    <ul>
-        @for (user of users; track user.id) {
-        <li>
-            {{user.id}} - {{user.userName}}
-        </li>
-        }
-    </ul>
+    <app-home></app-home>
 </div>
