--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
 
         @if (accountService.currentUser()) {
             <div class="dropdown" dropdown>
-                <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome user</a>
+                <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.username}}</a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a class="dropdown-item">Edit Profile</a>
                     <div class="dropdown-divider"></div>
