--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" href="/">Dating App</a>
 
         @if (accountService.currentUser()) {
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-                <a class="nav-link">Matches</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Lists</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/lists">Lists</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Messages</a>
+                <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
             </li>
         </ul>
         }
