-Toastr service has has been added to the project to display animated  errors on screen -Added route guard to prevent unauthorized users from accessing some tabs -Navbar now has more suitable colors for dating application

--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,15 @@
 .dropdown{
     cursor: pointer;
 }
+
+.custom-navbar {
+    background: linear-gradient(to right, #703b62, #994583); /* Jagodowy → Różowy */
+}
+
+.login-btn {
+    background-color: #E6A8D7;
+    color: black;
+    border: none;
+}
+
+
