--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top custom-navbar">
     <div class="container">
         <a class="navbar-brand" href="/">Dating App</a>
 
-        @if (accountService.currentUser()) {
+
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            @if (accountService.currentUser()) {
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
             </li>
@@ -13,19 +14,20 @@
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
             </li>
+            }
         </ul>
-        }
+
 
         @if (accountService.currentUser()) {
-            <div class="dropdown" dropdown>
-                <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.username}}</a>
-                <div *dropdownMenu class="dropdown-menu">
-                    <a class="dropdown-item">Edit Profile</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" (click)="logout()">Logout</a>
-                    
-                </div>
+        <div class="dropdown" dropdown>
+            <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.username | titlecase}}</a>
+            <div *dropdownMenu class="dropdown-menu">
+                <a class="dropdown-item">Edit Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="logout()">Logout</a>
+
             </div>
+        </div>
         }
 
         @if (!accountService.currentUser()) {
@@ -33,8 +35,9 @@
             <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
             <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
                 type="password">
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn login-btn" type="submit"><b>Login</b></button>
+
         </form>
-    }
+        }
     </div>
 </nav>
