-Middleware added to handle exceptions -error controller added for testing api errors

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
                 <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
             </li>
             }
+            <li class="nav-item">
+                <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+            </li>
         </ul>
 
 
