--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner>
+    <h3>Loading...</h3>
+</ngx-spinner>
 <div style="display: block; width: 100%; height: 60px;">
     <app-nav></app-nav>
 </div>
