--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,10 +1,87 @@
-<div class="row">
-    @for (photo of member().photos; track photo.id) {
-        <div class="col-2">
-            <img src="{{photo.url}}" alt="photo of user" class="img-thumbnail mb-1">
-            <button class="btn btn-sm">Main</button>
-            <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+<div class="container mt-4">
+    <!-- GALERIA ZDJĘĆ -->
+    <div class="row g-3">
+        @for (photo of member().photos; track photo.id) {
+        <div class="col-md-3 col-sm-6">
+            <div class="card shadow-sm">
+                <img src="{{photo.url}}" alt="photo of user" class="card-img-top img-thumbnail">
+                <div class="card-body text-center">
+                    <div class="d-flex justify-content-center gap-2">
+                        <button [disabled]="photo.isMain" (click)="setMainPhoto(photo)" [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'" class="btn btn-sm"><i class="fa fa-star"></i> Main</button>
+                        <button [disabled]="photo.isMain" (click)="deletePhoto(photo)" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Delete</button>
+                    </div>
+                </div>
+            </div>
         </div>
-    }
-    <div class="col-2"></div>
+        }
+    </div>
+
+
+    <!-- SEKCJA UPLOADU -->
+    <div class="row mt-5">
+        <div class="col-md-4">
+            <div class="card p-3 shadow">
+                <h4 class="text-center"><i class="fa fa-upload"></i> Add Photos</h4>
+                <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
+                    [uploader]="uploader"
+                    class="border border-primary rounded-3 p-4 text-center my-drop-zone bg-light dropzone-container">
+                    <i class="fa fa-cloud-upload-alt fa-3x text-primary"></i>
+                    <p class="mt-2 text-muted">Drop photos here</p>
+                </div>
+
+                <div class="mt-3 d-flex justify-content-center">
+                    <input type="file" ng2FileSelect [uploader]="uploader" id="fileInput" class="d-none">
+                    <label for="fileInput" class="btn btn-primary">
+                        <i class="fa fa-upload"></i> Select file
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-8" *ngIf="uploader?.queue?.length">
+            <div class="card p-3 shadow">
+                <h4 class="text-center"><i class="fa fa-tasks"></i> Upload Queue</h4>
+                <p class="text-center text-muted">Queue length: {{ uploader?.queue?.length }}</p>
+
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Size</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of uploader?.queue">
+                            <td>{{ item?.file?.name }}</td>
+                            <td *ngIf="uploader?.options?.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }}
+                                MB</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="mt-3">
+                    <p>Queue progress:</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+                            role="progressbar" [ngStyle]="{ 'width': uploader?.progress + '%' }">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-between mt-3">
+                    <button class="btn btn-success" (click)="uploader?.uploadAll()"
+                        [disabled]="!uploader?.getNotUploadedItems()?.length">
+                        <i class="fa fa-upload"></i> Upload All
+                    </button>
+                    <button class="btn btn-warning" (click)="uploader?.cancelAll()" [disabled]="!uploader?.isUploading">
+                        <i class="fa fa-ban"></i> Cancel
+                    </button>
+                    <button class="btn btn-danger" (click)="uploader?.clearQueue()"
+                        [disabled]="!uploader?.queue?.length">
+                        <i class="fa fa-trash"></i> Remove All
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
