--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-spinner>
+<ngx-spinner type="line-spin-clockwise-fade">
     <h3>Loading...</h3>
 </ngx-spinner>
 <div style="display: block; width: 100%; height: 60px;">
