--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,11 +44,11 @@
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading="Photos" #photoTab="tab">
-                @if (photoTab.active)
-                {
-                <gallery [items]="images" class="gallery" [thumbs]="true"></gallery>
+                @if (photoTab.active) {
+                  <gallery [items]="images" class="gallery" [itemAutosize]="true" [thumbs]="true" [nav]="true"></gallery>
                 }
-            </tab>
+              </tab>
+              
             <tab heading="Messages">
                 <p>Messages will go here</p>
             </tab>
