--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -65,7 +65,7 @@
 
             </tab>
             <tab heading="Edit Photos">
-                <app-photo-editor [member]="member"></app-photo-editor>
+                <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"></app-photo-editor>
             </tab>
         </tabset>
     </div>
