--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,6 +23,7 @@
 
         @if (accountService.currentUser()) {
         <div class="dropdown" dropdown>
+            <img class="me-2" src="{{accountService.currentUser()?.photoUrl || '../assets/user.png'}}" alt="user main image">
             <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.username | titlecase}}</a>
             <div *dropdownMenu class="dropdown-menu">
                 <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
