--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,17 +1,30 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
     <h2 class="text-center text-primary"> Sign up</h2>
     <hr>
     <div class="mb-3 form-floating">
-        <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="Username">
+        <input [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched" type="text" class="form-control" name="username" formControlName="username" placeholder="Username">
         <label>Username</label>
+        <div class="invalid-feedback text-start">Please enter a username</div>
     </div>
 
     <div class="mb-3 form-floating">
-        <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="Password">
+        <input [class.is-invalid]="registerForm.get('password')?.errors && registerForm.get('password')?.touched" type="password" class="form-control" name="password" formControlName="password" placeholder="Password">
         <label>Password</label>
+        <div *ngIf="registerForm.get('password')?.hasError('required')" class="invalid-feedback text-start">Please enter a password</div>
+        <div *ngIf="registerForm.get('password')?.hasError('minlength')" class="invalid-feedback text-start">Password must be at least 4 characters</div>
+        <div *ngIf="registerForm.get('password')?.hasError('maxlength')" class="invalid-feedback text-start">Password must be at most 15 characters</div>
+    </div>
+    <div class="mb-3 form-floating">
+        <input [class.is-invalid]="registerForm.get('confirmPassword')?.errors && registerForm.get('confirmPassword')?.touched" type="password" class="form-control" name="password" formControlName="confirmPassword" placeholder="Confirm Password">
+        <label>Confirm Password</label>
+        <div *ngIf="registerForm.get('confirmPassword')?.hasError('required')" class="invalid-feedback text-start">Please enter a confirm password</div>
+        <div *ngIf="registerForm.get('confirmPassword')?.hasError('isMatching')" class="invalid-feedback text-start">Confirm password must match password</div>
     </div>
     <div class="form-group text-center">
         <button class="btn btn-success me-2" type="submit">Register</button>
         <button class="btn btn-default me-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
+
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form value: {{registerForm.status | json}}</p>
