--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,30 +1,36 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()">
-    <h2 class="text-center text-primary"> Sign up</h2>
+    <h2 class="text-center text-primary">Sign up</h2>
     <hr>
-    <div class="mb-3 form-floating">
-        <input [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched" type="text" class="form-control" name="username" formControlName="username" placeholder="Username">
-        <label>Username</label>
-        <div class="invalid-feedback text-start">Please enter a username</div>
+
+    <div class="mb-3">
+        <label style="margin-right: 10px;">I am a: </label>
+        <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="male" formControlName="gender"> Male
+        </label>
+        <label class="form-check-label ms-3">
+            <input type="radio" class="form-check-input" value="female" formControlName="gender"> Female
+        </label>
     </div>
 
-    <div class="mb-3 form-floating">
-        <input [class.is-invalid]="registerForm.get('password')?.errors && registerForm.get('password')?.touched" type="password" class="form-control" name="password" formControlName="password" placeholder="Password">
-        <label>Password</label>
-        <div *ngIf="registerForm.get('password')?.hasError('required')" class="invalid-feedback text-start">Please enter a password</div>
-        <div *ngIf="registerForm.get('password')?.hasError('minlength')" class="invalid-feedback text-start">Password must be at least 4 characters</div>
-        <div *ngIf="registerForm.get('password')?.hasError('maxlength')" class="invalid-feedback text-start">Password must be at most 15 characters</div>
-    </div>
-    <div class="mb-3 form-floating">
-        <input [class.is-invalid]="registerForm.get('confirmPassword')?.errors && registerForm.get('confirmPassword')?.touched" type="password" class="form-control" name="password" formControlName="confirmPassword" placeholder="Confirm Password">
-        <label>Confirm Password</label>
-        <div *ngIf="registerForm.get('confirmPassword')?.hasError('required')" class="invalid-feedback text-start">Please enter a confirm password</div>
-        <div *ngIf="registerForm.get('confirmPassword')?.hasError('isMatching')" class="invalid-feedback text-start">Confirm password must match password</div>
-    </div>
+    <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'Username'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [label]="'Known as'"></app-text-input>
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" [label]="'Date of Birth'" [maxDate]="maxDate"></app-date-picker>
+    <app-text-input [formControl]="$any(registerForm.controls['city'])" [label]="'City'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['country'])" [label]="'Country'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Password'" [type]="'password'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
+
+    @if (validationErrors) {
+        <div class="alert alert-danger text-start">
+            <ul>
+                @for (error of validationErrors; track $index) {
+                    <li>{{error}}</li>
+                }
+            </ul>
+        </div>
+    }
     <div class="form-group text-center">
-        <button class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default me-2" (click)="cancel()" type="button">Cancel</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
+        <button class="btn btn-danger me-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
-
-<p>Form value: {{registerForm.value | json}}</p>
-<p>Form value: {{registerForm.status | json}}</p>
