--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
         @if (accountService.currentUser()) {
         <div class="dropdown" dropdown>
             <img class="me-2" src="{{accountService.currentUser()?.photoUrl || '../assets/user.png'}}" alt="user main image">
-            <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.username | titlecase}}</a>
+            <a dropdownToggle class="dropdown-toggle text-light" style="text-decoration: none;"> Welcome {{accountService.currentUser()?.knownAs}}</a>
             <div *dropdownMenu class="dropdown-menu">
                 <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
                 <div class="dropdown-divider"></div>
