--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,3 +1,59 @@
-@for (message of messageService.paginatedResult()?.items; track message.id) {
-    <p>{{ message.content }}</p>
+<div class="container mt-3">
+  <div class="d-flex">
+    <div class="btn-group">
+      <button class="btn btn-primary" btnRadio="Unread" [(ngModel)]="container" (click)="loadMessages()">
+        Unread
+      </button>
+      <button class="btn btn-primary" btnRadio="Inbox" [(ngModel)]="container" (click)="loadMessages()">
+        Inbox
+      </button>
+      <button class="btn btn-primary" btnRadio="Outbox" [(ngModel)]="container" (click)="loadMessages()">
+        Outbox
+      </button>
+
+    </div>
+  </div>
+</div>
+
+@if (!messageService.paginatedResult()?.items) {
+<h3>No messages</h3>
+}
+@else {
+<table class="table table-hover mt-3" style="cursor: pointer;">
+  <thead>
+    <tr>
+      <th style="width: 40%;">Message</th>
+      <th style="width: 20%;">From / To</th>
+      <th style="width: 20%;">Sent / Received</th>
+      <th style="width: 20%;"></th>
+    </tr>
+  </thead>
+  <tbody class="align-middle">
+    @for (message of messageService.paginatedResult()?.items; track message.id) {
+    <tr routerLink="{{getRoute(message)}}">
+      <td>{{ message.content }}</td>
+      <td>
+        <div>
+          <img class="rounded-circle me-2"
+            [src]="container === 'Outbox' ? (message.recipentPhotoUrl || './assets/user.png') : (message.senderPhotoUrl || './assets/user.png')"
+            alt="image of user">
+          <strong>{{container === 'Outbox' ? message.recipentUsername : message.senderUsername}}</strong>
+        </div>
+      </td>
+      <td>{{message.messageSent | timeago}}</td>
+      <td><button class="btn btn-danger">Delete</button></td>
+    </tr>
+    }
+  </tbody>
+</table>
+}
+
+@if (messageService.paginatedResult()?.totalCount) {
+  <div class="d-flex justify-content-center">
+      <pagination [boundaryLinks]="true" [totalItems]="messageService.paginatedResult()!.totalCount"
+          [itemsPerPage]="messageService.paginatedResult()!.pageSize" (pageChanged)="pageChanged($event)" [maxSize]="10"
+          previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+  
+      </pagination>
+  </div>
   }
