-A lot of issues with pagination in Frontend are now fixed

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,3 @@
-@if (member) {
 <div class="row">
     <div class="col-4">
         <div class="card">
@@ -25,7 +24,7 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Message</button>
+                    <button (click)="selectTab('Messages')" class="btn btn-success">Message</button>
                 </div>
             </div>
         </div>
@@ -45,15 +44,14 @@
             </tab>
             <tab heading="Photos" #photoTab="tab" (selectTab)="onTabActivated($event)">
                 @if (photoTab.active) {
-                  <gallery [items]="images" class="gallery" [itemAutosize]="true" [thumbs]="true" [nav]="true"></gallery>
+                <gallery [items]="images" class="gallery" [itemAutosize]="true" [thumbs]="true" [nav]="true"></gallery>
                 }
-              </tab>
-              
+            </tab>
+
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages [username]="member.username" [messages]="messages"></app-member-messages>
+                <app-member-messages (updateMessages)="onUpdateMessages($event)" [username]="member.username" [messages]="messages"></app-member-messages>
             </tab>
         </tabset>
     </div>
 
 </div>
-}
