--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -19,7 +19,7 @@
                                 <span class="text-danger">(unread)</span>
                                 }
                                 @if (message.dateRead && message.senderUsername !== username()) {
-                                <span class="text-success">(read {{message.dateRead | timeago}})</span>
+                                <span class="text-success ms-1">(read {{message.dateRead | timeago}})</span>
                                 }
 
                             </small>
@@ -33,11 +33,11 @@
         }
     </div>
     <div class="card-footer">
-        <form>
+        <form #messageForm="ngForm" (ngSubmit)="sendMessage()">
             <div class="input-group">
-                <input class="form-control input-sm" placeholder="Send a private message">
+                <input required [(ngModel)]="messageContent" name="messageContent" class="form-control input-sm" placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="submit">Send</button>
+                    <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
                 </div>
             </div>
         </form>
