--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
             </li>
+            <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+                <a class="nav-link" routerLinkActive="active" routerLink="/admin">Admin</a>
+            </li>
             }
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
