--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-5">
+    @if (!accountService.currentUser()) {
     <div style="text-align: center;">
         @if (registerMode == false) {
         <h1>Find your match</h1>
@@ -18,4 +19,10 @@
         </div>
         }
     </div>
+    }
+    @else {
+        <div style="text-align: center;">
+            <h1>Hello {{accountService.currentUser()?.knownAs}}</h1>
+        </div>
+    }
 </div>
