-Users now can send messages to each other via live signalR hub instead of basic api endpoints

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -56,8 +56,7 @@
             </tab>
 
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages (updateMessages)="onUpdateMessages($event)" [username]="member.username"
-                    [messages]="messages"></app-member-messages>
+                <app-member-messages [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
