--- a/client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<h2>Admin panek</h2>
+<h2>Admin panel</h2>
 <div class="tab-panel">
     <tabset class="member-tabset">
         <tab heading="User management" *appHasRole="['Admin']">
